--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -1,3 +1,32 @@
-h1 {
-  color: red;
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
 }
+
+h1, h2, h3, h4, h5 {
+  font-weight: 800;
+  margin: 0;
+  padding: 0;
+}
+
+ol, ul {
+  margin: 0;
+  padding: 0;
+}
+
+.main-container {
+  box-sizing: border-box;
+  max-width: 1280px;
+  margin: 20px auto;
+  padding: 40px;
+  background-color: #F5F7FA;
+}
+
+.cv-container {
+  display: flex;
+  flex-direction: row;
+  background-color: #fff;
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+}
+
+@import "./sideContainer.scss";
