--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -5,6 +5,14 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Viktor Popov CV
     link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
+    link(rel="preconnect", href="https://fonts.gstatic.com")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap")
     link(rel="stylesheet", href="./css/main.min.css")
+
   body 
-    h1 Hello World
+    .main-container
+      .cv-container
+        include sections/sideContainer
+        .cv-content-container
+          h1 main content
+        
