--- a/source/template/sections/sideContainer.pug
+++ b/source/template/sections/sideContainer.pug
@@ -5,13 +5,16 @@
       h3 contacts
       div
         span Cell 1:
-        a(href="tel:+380669848213") +38-066-984-98-13
+        a(href="tel:+380669848213") +38-066-984-82-13
       div
         span Cell 2:
         a(href="tel:+380679890289") +38-067-989-02-89
       div
         span E-mail
         a(href="mailto:viktorpopov080@gmail.com") viktorpopov080@gmail.com
+      div
+        span Skype
+        a(href="skype:viktor_popov_88?chat") Viktor Popov
 
   .sidebar-content-section.skills
     h3 tech skills
@@ -24,30 +27,3 @@
       li CSS3, LESS, SASS, SCSS
       li GIT
       li Gulp, Webpack
-
-
-        //-   <!-- tech skills section -->
-        //-   <div class="sidebar-content-section skills">
-        //-     <h3>tech skills</h3>
-        //-     <ul>
-        //-       <li>HTML5</li>
-        //-       <li>CSS3</li>
-        //-       <li>GIT</li>
-        //-       <li>WebPack</li>
-        //-       <li>JavaScript</li>
-        //-       <li>React.js</li>
-        //-       <li>Node.js</li>
-        //-     </ul>
-        //-   </div>
-    
-        //-   <!-- soft skills section -->
-        //-   <div class="sidebar-content-section soft-skills">
-        //-     <h3>soft skills</h3>
-        //-     <ul>
-        //-       <li>Scrum</li>
-        //-       <li>Agile</li>
-        //-       <li>GTD</li>
-        //-       <li>Teamwork</li>
-        //-     </ul>
-        //-   </div>
-        //- </div>
