--- a/source/template/sections/sideContainer.pug
+++ b/source/template/sections/sideContainer.pug
@@ -3,18 +3,23 @@
   .sidebar-content-container
     .sidebar-content-section.contacts
       h3 contacts
-      div
-        span Cell 1:
-        a(href="tel:+380669848213") +38-066-984-82-13
-      div
-        span Cell 2:
-        a(href="tel:+380679890289") +38-067-989-02-89
-      div
-        span E-mail
-        a(href="mailto:viktorpopov080@gmail.com") viktorpopov080@gmail.com
-      div
-        span Skype
-        a(href="skype:viktor_popov_88?chat") Viktor Popov
+      .sidebar-contacts-elem-container
+        .sidebar-contacts-elem
+          div Cell 1:
+          div
+            a(href="tel:+380669848213") +38-066-984-82-13
+        .sidebar-contacts-elem
+          div Cell 2:
+          div
+            a(href="tel:+380679890289") +38-067-989-02-89
+        .sidebar-contacts-elem
+          div E-mail:
+          div
+            a(href="mailto:viktorpopov080@gmail.com") viktorpopov080@gmail.com
+        .sidebar-contacts-elem
+          div Skype:
+          div
+            a(href="skype:viktor_popov_88?chat") viktor_popov_88
 
   .sidebar-content-section.skills
     h3 tech skills
@@ -23,6 +28,7 @@
       li Redux
       li ES5, ES6, JSX
       li TypeScript
+      li CoffeeScript
       li HTML5, JADE/PUG
       li CSS3, LESS, SASS, SCSS
       li GIT
