--- a/source/styles/sideContainer.scss
+++ b/source/styles/sideContainer.scss
@@ -1,14 +1,38 @@
 .side-container {
-  width: 370px;
+  min-width: 400px;
   background: #1E2939;
   padding-top: 40px;
+  letter-spacing: .5px;
+  
+  a {
+    transition: color .2s ease;
+    &, &:active, &:visited {
+      color: #aaa;
+      text-decoration: none;
+    }
+    &:hover {
+      color: #FB6D3A;
+    }
+  }
+  
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    li::before {
+      content: "\2022";
+      color: #FB6D3A;
+      margin-right: 10px;
+      font-size: 1.2em;
+    }
+  }
 
   .portrait {
     overflow: hidden;
     background-image: url('../images/portrait.jpg');
     background-position: bottom;
     background-size: cover;
-    height: 400px;
+    height: 450px;
   }
   .sidebar-content-section {
     padding: 30px;
@@ -22,29 +46,10 @@
       margin-bottom: 10px;
       text-transform: capitalize;
     }
-  }
 
-  a, a:active, a:visited {
-    color: #fff;
-    opacity: .5;
-    margin-left: 10px;
-    text-decoration: none;
-  }
-
-  a:hover {
-    color: white;
-  }
-
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-
-  ul li::before {
-    content: "\2022";
-    color: #FB6D3A;
-    margin-right: 10px;
-    font-size: 1.2em;
+    .sidebar-contacts-elem {
+      display: grid;
+      grid-template-columns: 1fr 3fr
+    }
   }
 }
