--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Viktor Popov CV
-    link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
+    link(rel="icon", href="./favicon.ico")
     link(rel="preconnect", href="https://fonts.gstatic.com")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap")
     link(rel="stylesheet", href="./css/main.min.css")
@@ -13,6 +13,5 @@ html(lang="en")
     .main-container
       .cv-container
         include sections/sideContainer
-        .cv-content-container
-          h1 main content
+        include sections/mainContentContainer
         
