add 'education' section

--- a/source/styles/mainContentContainer.scss
+++ b/source/styles/mainContentContainer.scss
@@ -29,7 +29,8 @@
   }
 }
 
-.work-experience-section {
+.work-experience-section,
+.education-section {
   margin-bottom: 50px;
   font-size: 1.2em;
 }
