--- a/source/template/sections/mainContentContainer.pug
+++ b/source/template/sections/mainContentContainer.pug
@@ -27,3 +27,14 @@
           li working with designers to clarify, update and improve UI/UX;
           li collaboraing with QA;
           li conversation with foreign client, discussing and evaluating new tasks, clarifying details, suggesting best ways of feature implementation;
+
+  .education-section
+    .education-section-header Education
+    div
+      h4.university Kharkiv National Technical University of Civil Engineering and Architecture
+      h5 
+        | Industrial and civil engineering. Specialist (honors degree)
+      p.date 
+        | September 2005 - June 2010
+        span.separator |
+        | Kharkiv, Ukraine
