--- a/source/template/sections/mainContentContainer.pug
+++ b/source/template/sections/mainContentContainer.pug
@@ -12,13 +12,13 @@
     .workplace
       h4 Front-End developer
         span.separator |
-        span.company DataArt
+        | DataArt
       p.date 
         | March 2017 - up to now 
         span.separator |
         | Kharkiv, Ukraine
-      p.resps
-        span.highlight Responsibilities: 
+      div.resps
+        h4 Responsibilities: 
         ul.resps-list
           li developing of new features on client side of the site using design projects;
           li creating pixel-perfect markup using HTML5, CSS3, preprocessors LESS/SASS;
@@ -31,10 +31,24 @@
   .education-section
     .education-section-header Education
     div
-      h4.university Kharkiv National Technical University of Civil Engineering and Architecture
-      h5 
-        | Industrial and civil engineering. Specialist (honors degree)
+      h4 Kharkiv National Technical University of Civil Engineering and Architecture
+      h5 Industrial and civil engineering. Specialist (honors degree)
       p.date 
         | September 2005 - June 2010
         span.separator |
         | Kharkiv, Ukraine
+
+  .additional-info-section
+    .additional-info-header Additional Information
+    h4 Projects:
+    ul 
+      li 
+        | Link to this 
+        a(href="https://github.com/ViktorRV/CV" target="blank") resume
+        |  on Github
+    h4 Hobbys:
+    ul
+      li football
+      li table tennis
+      li driving
+      li travelling
