--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -12,6 +12,7 @@ html(lang="en")
   body 
     .main-container
       .cv-container
-        include sections/sideContainer
-        include sections/mainContentContainer
+        include ./variables
+        include ./sections/sideContainer
+        include ./sections/mainContentContainer
         
