--- a/source/template/sections/mainContentContainer.pug
+++ b/source/template/sections/mainContentContainer.pug
@@ -1,9 +1,11 @@
 .cv-content-container
   .about-me-section
-    .about-me-name Viktor Popov
-    .about-me-profession middle front-end developer
+    .about-me-name= name
+    .about-me-profession= job
     .about-me-description 
-      | Hello. I'm a Front-End developer with 4 years experience in building and maintaining of responsive web applications. Have strong knowledge of ES5, ES6, HTML, CSS.
+      | Hello. I'm a Front-End developer with 
+      span= expYears 
+      |  years experience in building and maintaining of responsive web applications. Have strong knowledge of ES5, ES6, HTML, CSS.
       br
       | Looking for new opportunities to use and improve my skills in web development
 
