--- a/source/template/sections/sideContainer.pug
+++ b/source/template/sections/sideContainer.pug
@@ -1,4 +1,7 @@
-.side-container
+.sidebar-container
+  .sidebar-header-mobile
+    .sidebar-name= name
+    .sidebar-profession= job
   .portrait
   .sidebar-content-container
     .sidebar-content-section.contacts
