--- a/source/styles/mainContentContainer.scss
+++ b/source/styles/mainContentContainer.scss
@@ -1,26 +1,34 @@
 .cv-content-container {
-  padding: 40px;
-  width: 100%;
+  padding: 15px;
+  
   h4, a {
-    color: #FB6D3A;
+    color: $orangeHighlight;
   }
   .about-me-section {
     margin-bottom: 30px;
     .about-me-name {
+      display: none;
       text-align: center;
       font-size: 45px;
       line-height: 55px;
       font-weight: bold;
       margin-bottom: 15px;
+      @media screen and ($breakpointSmall) {
+        display: block;
+      }
     }
     
     .about-me-profession {
+      display: none;
       font-weight: bold;
       text-align: center;
       margin-top: 0;
       margin-bottom: 20px;
       font-size: 2em;
       text-transform: capitalize;
+      @media screen and ($breakpointSmall) {
+        display: block;
+      }
     }
     
     .about-me-description {
@@ -28,6 +36,15 @@
       line-height: 1.5em;
       margin: 0;
       text-align: justify;
+    }
+
+  }
+  @media screen and ($breakpointSmall) {
+    width: 100%;
+    padding: 40px;
+    .about-me-name,
+    .about-me-profession {
+      display: block;
     }
   }
 }
@@ -41,9 +58,11 @@
 .education-section-header,
 .additional-info-header {
   font-size: 1.8em;
-  line-height: 2.2em;
   margin-bottom: 10px;
   font-weight: bold;
+  @media screen and ($breakpointSmall) {
+    line-height: 2.2em;
+  }
 }
 
 .date {
