--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -42,6 +42,11 @@ a {
     margin: 20px auto;
     padding: 40px;
   }
+  @media print {
+    margin: 0;
+    padding: 0;
+    color: black;
+  }
 }
 
 .cv-container {
@@ -50,7 +55,6 @@ a {
     flex-direction: row;
     background-color: #fff;
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
-    
   }
 }
 
