--- a/source/styles/mainContentContainer.scss
+++ b/source/styles/mainContentContainer.scss
@@ -37,7 +37,6 @@
       margin: 0;
       text-align: justify;
     }
-
   }
   @media screen and ($breakpointSmall) {
     width: 100%;
@@ -47,40 +46,49 @@
       display: block;
     }
   }
-}
 
-.work-experience-section,
-.education-section,
-.additional-info-section {
-  font-size: 1.2em;
-}
-.work-experience-section-header,
-.education-section-header,
-.additional-info-header {
-  font-size: 1.8em;
-  margin-bottom: 10px;
-  font-weight: bold;
-  @media screen and ($breakpointSmall) {
-    line-height: 2.2em;
+  .work-experience-section,
+  .education-section,
+  .additional-info-section {
+    font-size: 1.2em;
+  }
+  .work-experience-section-header,
+  .education-section-header,
+  .additional-info-header {
+    font-size: 1.8em;
+    margin-bottom: 10px;
+    font-weight: bold;
+    @media screen and ($breakpointSmall) {
+      line-height: 2.2em;
+    }
+  }
+  
+  .date {
+    font-size: .8em;
+    line-height: 15px;
+    color: $greyColor;
+  }
+  
+  .workplace {
+    margin-bottom: 20px;
+  }
+  
+  .university {
+    margin-bottom: 12px;
+  }
+  
+  .separator {
+    margin: 0 7px;
+    color: black;
+  }
+
+  @media print {
+    font-size: .9em;
+    .work-experience-section-header,
+    .education-section-header,
+    .additional-info-header {
+      font-size: 1.2em;
+    }
   }
 }
 
-.date {
-  font-size: .8em;
-  line-height: 15px;
-  color: #A8A8A8;
-}
-
-.workplace {
-  margin-bottom: 20px;
-}
-
-/* education section */
-.university {
-  margin-bottom: 12px;
-}
-
-.separator {
-  margin: 0 7px;
-  color: black;
-}
