--- a/source/template/sections/mainContentContainer.pug
+++ b/source/template/sections/mainContentContainer.pug
@@ -2,24 +2,48 @@
   .about-me-section
     .about-me-name= name
     .about-me-profession= job
+    .abc= currentYear
     .about-me-description 
       | Hello. I'm a Front-End developer with 
       span= expYears 
-      |  years experience in building and maintaining of responsive web applications. Have strong knowledge of ES5, ES6, HTML, CSS.
+      |  years of experience in building and maintaining of responsive web applications. Have a strong knowledge of ReactJS, Redux, ES5, ES6, HTML5, CSS3.
       br
-      | Looking for new opportunities to use and improve my skills in web development
+      | Looking for the new opportunities to use and improve my skills in web development.
 
   .work-experience-section
     .work-experience-section-header Work Experience
     .workplace
       h4 Front-End developer
         span.separator |
-        | DataArt
+        | Intetics
       p.date 
-        | March 2017 - up to now 
+        | November 2021 - up to now 
         span.separator |
         | Kharkiv, Ukraine
-      div.resps
+      .project-description
+        h4 Project description 
+        p Platform for DevOps that is created for gathering, sorting and updating data about users, teams, organizaitons. Project allows its users to get all the data relevant to their permissions. 
+      .resps
+        h4 Responsibilities: 
+        ul.resps-list
+          li creating of new pages using ReactJS library;
+          li maintaining and updating of existing code using best practices principles;
+          li coverage of the code by unit and E2E tests;
+          li code review;
+          li discussing and providing ideas for implementation of new pages and updating of existing code and UI;
+    br
+    .workplace
+      h4 Front-End developer
+        span.separator |
+        | DataArt
+      p.date 
+        | March 2017 - November 2021
+        span.separator |
+        | Kharkiv, Ukraine
+      .project-description
+        h4 Project description 
+        p Platform for users that are interested in their's credit rate provided by all global organizations that are responsible for this information. Being an authorized user of this platform persons are regularly provided with a credit rate data. Project is built in understandable visual manner using best UX and UI practices.
+      .resps
         h4 Responsibilities: 
         ul.resps-list
           li developing of new features on client side of the site using design projects;
@@ -48,7 +72,7 @@
         | Link to this 
         a(href="https://github.com/ViktorRV/CV" target="blank") resume
         |  on Github
-    h4 Hobbys:
+    h4 Hobbies:
     ul
       li football
       li table tennis
