--- a/source/styles/mainContentContainer.scss
+++ b/source/styles/mainContentContainer.scss
@@ -84,6 +84,10 @@
 
   @media print {
     font-size: .9em;
+    color: initial;
+    h4, a {
+      color: initial;
+    }
     .work-experience-section-header,
     .education-section-header,
     .additional-info-header {
