update CV to senior title

--- a/source/template/sections/mainContentContainer.pug
+++ b/source/template/sections/mainContentContainer.pug
@@ -1,12 +1,11 @@
 .cv-content-container
   .about-me-section
-    .about-me-name= name
-    .about-me-profession= job
-    .abc= currentYear
+    h1.about-me-name= name
+    h2.about-me-profession= job
     .about-me-description 
       | Hello. I'm a Front-End developer with 
       span= expYears 
-      |  years of experience in building and maintaining of responsive web applications. Have a strong knowledge of ReactJS, Redux, ES5, ES6, HTML5, CSS3.
+      |  years of experience in building and maintaining of responsive web applications. Have a strong knowledge of React, Redux, ES5, ES6, HTML5, CSS3 and basic knowledge of a backend part of the MERN stack: Node.js, Express.js, and MongoDB.
       br
       | Looking for the new opportunities to use and improve my skills in web development.
 
@@ -22,11 +21,11 @@
         | Kharkiv, Ukraine
       .project-description
         h4 Project description 
-        p Platform for DevOps that is created for gathering, sorting and updating data about users, teams, organizaitons. Project allows its users to get all the data relevant to their permissions. 
+        p Platform for DevOps that is created for leveraging and maintaining of the CI/CD process: integration with GitHub, keeping track of workflows, runs, displaying appropriate logs, gathering, sorting and updating data about users, teams, organizaitons. Project allows its users to get all the data relevant to their permissions. 
       .resps
         h4 Responsibilities: 
         ul.resps-list
-          li creating of new pages using ReactJS library;
+          li creating of new pages using React library;
           li maintaining and updating of existing code using best practices principles;
           li coverage of the code by unit and E2E tests;
           li code review;
