--- a/source/template/variables.pug
+++ b/source/template/variables.pug
@@ -1,3 +1,3 @@
 - var name = 'Viktor Popov'
-- var job = 'strong-middle front-end developer'
-- var expYears = '5'
+- var job = 'senior front-end developer'
+- var expYears = '7'
