--- a/source/template/sections/sideContainer.pug
+++ b/source/template/sections/sideContainer.pug
@@ -26,13 +26,17 @@
 
     .sidebar-content-section.skills
       h3 tech skills
+      h4 Primary:
       ul
-        li ReactJS
+        li React
         li Redux
         li ES5, ES6, JSX
         li TypeScript
-        li CoffeeScript
-        li HTML5, JADE/PUG
-        li CSS3, LESS, SASS, SCSS
+        li HTML5, CSS3, LESS, SASS, SCSS
         li GIT
-        li Gulp, Webpack
+        li Webpack
+      h4 Basic knowledge: 
+      ul 
+        li Node.js 
+        li Express.js
+        li MongoDB
