update mobile markup

--- a/source/template/sections/sideContainer.pug
+++ b/source/template/sections/sideContainer.pug
@@ -1,7 +1,7 @@
 .sidebar-container
   .sidebar-header-mobile
-    .sidebar-name= name
-    .sidebar-profession= job
+    h1.sidebar-name= name
+    h2.sidebar-profession= job
   .sidebar-content-container
     .portrait
     .sidebar-content-section.contacts
