--- a/source/styles/sideContainer.scss
+++ b/source/styles/sideContainer.scss
@@ -3,7 +3,7 @@
   padding-top: 20px;
   letter-spacing: .5px;
   @media screen and ($breakpointSmall) {
-    min-width: 400px;
+    min-width: 330px;
     padding-top: 40px;
   }
 
@@ -13,10 +13,12 @@
   }
 
   a {
-    color: #ccc;
+    color: $defaultWhiteColor;
     text-decoration: none;
+    border-bottom: 1px solid $defaultWhiteColor;
     &:hover {
       color: $orangeHighlight;
+      border-bottom: 1px solid $orangeHighlight;
     }
     
   }
