--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -9,3 +9,4 @@ $breakpointLargest: "min-width: 1439px";// large desktops
 $orangeHighlight: #FB6D3A;
 $greyColor: #A8A8A8;
 $sidebarBgColor: #1E2939;
+$defaultWhiteColor: #ccc;
