--- a/source/template/sections/sideContainer.pug
+++ b/source/template/sections/sideContainer.pug
@@ -8,13 +8,9 @@
       h3 contacts
       .sidebar-contacts-elem-container
         .sidebar-contacts-elem
-          div Cell 1:
+          div Telegram:
           div
-            a(href="tel:+380669848213") +38-066-984-82-13
-        .sidebar-contacts-elem
-          div Cell 2:
-          div
-            a(href="tel:+380679890289") +38-067-989-02-89
+            a(href="https://t.me/viktor_popov_080" target="_blank") @viktor_popov_080
         .sidebar-contacts-elem
           div E-mail:
           div
