updates for print

--- a/source/template/sections/sideContainer.pug
+++ b/source/template/sections/sideContainer.pug
@@ -4,35 +4,36 @@
     h2.sidebar-profession= job
   .sidebar-content-container
     .portrait
-    .sidebar-content-section.contacts
-      h3 contacts
-      .sidebar-contacts-elem-container
-        .sidebar-contacts-elem
-          div Telegram:
-          div
-            a(href="https://t.me/viktor_popov_080" target="_blank") @viktor_popov_080
-        .sidebar-contacts-elem
-          div E-mail:
-          div
-            a(href="mailto:viktorpopov080@gmail.com") viktorpopov080@gmail.com
-        .sidebar-contacts-elem
-          div Skype:
-          div
-            a(href="skype:viktor_popov_88?chat") viktor_popov_88
+    .sidebar-content-wrapper
+      .sidebar-content-section.contacts
+        h3 contacts
+        .sidebar-contacts-elem-container
+          .sidebar-contacts-elem
+            div Telegram:
+            div
+              a(href="https://t.me/viktor_popov_080" target="_blank") @viktor_popov_080
+          .sidebar-contacts-elem
+            div E-mail:
+            div
+              a(href="mailto:viktorpopov080@gmail.com") viktorpopov080@gmail.com
+          .sidebar-contacts-elem
+            div Skype:
+            div
+              a(href="skype:viktor_popov_88?chat") viktor_popov_88
 
-    .sidebar-content-section.skills
-      h3 tech skills
-      h4 Primary:
-      ul
-        li React
-        li Redux
-        li ES5, ES6, JSX
-        li TypeScript
-        li HTML5, CSS3, LESS, SASS, SCSS
-        li GIT
-        li Webpack
-      h4 Basic knowledge: 
-      ul 
-        li Node.js 
-        li Express.js
-        li MongoDB
+      .sidebar-content-section.skills
+        h3 tech skills
+        h4 Primary:
+        ul
+          li React
+          li Redux
+          li ES5, ES6, JSX
+          li TypeScript
+          li HTML5, CSS3, LESS, SASS, SCSS
+          li GIT
+          li Webpack
+        h4 Basic knowledge: 
+        ul 
+          li Node.js 
+          li Express.js
+          li MongoDB
