--- a/source/styles/sideContainer.scss
+++ b/source/styles/sideContainer.scss
@@ -23,6 +23,10 @@
       color: $orangeHighlight;
       border-bottom: 1px solid $orangeHighlight;
     }
+    @media print {
+      color: black;
+      border-bottom: none;
+    }
     
   }
 
@@ -32,6 +36,14 @@
       flex-direction: row;
     }
   }
+
+  .sidebar-content-wrapper {
+    @media print {
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
 
   .sidebar-header-mobile {
     color: white;
@@ -77,20 +89,27 @@
 
     .sidebar-contacts-elem {
       display: grid;
-      grid-template-columns: 1fr 3fr
+      grid-template-columns: 1fr 3fr;
     }
 
     @media screen and ($breakpointMedium) {
       padding: 30px;
     }
-
+    
     @media print {
       color: black;
       font-size: 1em;
       line-height: 1.5em;
-      a {
-        color: black;
-        text-decoration: none;
+      &.skills ul {
+        li {
+          display: inline-block;
+          &::before {
+            display: none;
+          }
+          &::after {
+            content: ";";
+          }
+        }
       }
     }
   }
