--- a/source/styles/sideContainer.scss
+++ b/source/styles/sideContainer.scss
@@ -17,17 +17,15 @@
 
   a {
     color: $defaultWhiteColor;
-    text-decoration: none;
     border-bottom: 1px solid $defaultWhiteColor;
     &:hover {
       color: $orangeHighlight;
       border-bottom: 1px solid $orangeHighlight;
     }
     @media print {
-      color: black;
+      color: $defaultBlackColor;
       border-bottom: none;
     }
-    
   }
 
   .sidebar-content-container {
@@ -38,9 +36,14 @@
   }
 
   .sidebar-content-wrapper {
+    padding: 15px;
+    @media ($breakpointMedium) {
+      padding: 30px;
+    }
     @media print {
       display: flex;
       flex-direction: column;
+      padding: 0;
     }
   }
 
@@ -50,12 +53,11 @@
     margin-bottom: 20px;
     text-align: center;
     text-transform: capitalize;
-    font-size: 1.5em;
     @media screen and ($breakpointSmall) {
       display: none;
     }
     @media print {
-      color: black;
+      color: $defaultBlackColor;
     }
   }
   
@@ -74,32 +76,27 @@
       min-width: 150px;
     }
   }
+
   .sidebar-content-section {
-    padding: 20px;
     color: white;
     line-height: 1.5em;
 
     h3 {
-      font-size: 1.5em;
-      line-height: 27px;
-      margin: 0;
-      margin-bottom: 10px;
       text-transform: capitalize;
     }
 
     .sidebar-contacts-elem {
       display: grid;
       grid-template-columns: 1fr 3fr;
+      margin-bottom: .2rem;
     }
 
-    @media screen and ($breakpointMedium) {
-      padding: 30px;
-    }
     
     @media print {
-      color: black;
+      color: $defaultBlackColor;
       font-size: 1em;
       line-height: 1.5em;
+      padding: 10px;
       &.skills ul {
         li {
           display: inline-block;
