--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -10,3 +10,8 @@ $orangeHighlight: #FB6D3A;
 $greyColor: #A8A8A8;
 $sidebarBgColor: #1E2939;
 $defaultWhiteColor: #ccc;
+$defaultBlackColor: black;
+
+// font sizes:
+$defaultFontSize: 16px;
+$printFontSize: 14px;
