add LinkedIn link and English level

--- a/source/template/sections/sideContainer.pug
+++ b/source/template/sections/sideContainer.pug
@@ -6,23 +6,30 @@
     .portrait
     .sidebar-content-wrapper
       .sidebar-content-section.contacts
-        h3 contacts
+        h3 Contacts:
         .sidebar-contacts-elem-container
           .sidebar-contacts-elem
             div Telegram:
             div
               a(href="https://t.me/viktor_popov_080" target="_blank") @viktor_popov_080
           .sidebar-contacts-elem
-            div E-mail:
-            div
-              a(href="mailto:viktorpopov080@gmail.com") viktorpopov080@gmail.com
-          .sidebar-contacts-elem
             div Skype:
             div
               a(href="skype:viktor_popov_88?chat") viktor_popov_88
+          .sidebar-contacts-elem
+            div LinkedIn:
+            div
+              a(href="https://www.linkedin.com/in/viktor-popov-b28242a2/" target="_blank") viktor-popov-b28242a2
+          .sidebar-contacts-elem
+            div E-mail:
+            div
+              a(href="mailto:viktorpopov080@gmail.com") viktorpopov080@gmail.com
 
       .sidebar-content-section.skills
-        h3 tech skills
+        h3 Languages: 
+        ul 
+          li English: Upper-intermediate
+        h3 Tech skills:
         h4 Primary:
         ul
           li React
