--- a/source/template/sections/mainContentContainer.pug
+++ b/source/template/sections/mainContentContainer.pug
@@ -1,5 +1,6 @@
 .cv-content-container
   .about-me-section
+    button#print-btn(onClick='window.print()') Convert to PDF
     h1.about-me-name= name
     h2.about-me-profession= job
     .about-me-description 
