make portrait monochrome for print

--- a/source/styles/sideContainer.scss
+++ b/source/styles/sideContainer.scss
@@ -74,6 +74,8 @@
     @media print {
       height: 170px;
       min-width: 150px;
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
     }
   }
 
