--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -2,13 +2,13 @@
 $breakpointSmallest: "min-width: 480px";
 $breakpointSmall: "min-width: 767px"; // tablets
 $breakpointMedium: "min-width: 1023px"; // tablets and small desktops
-$breakpointLarge: "min-width: 1150px";// large tablets and desktops
-$breakpointLargest: "min-width: 1439px";// large desktops
+$breakpointLarge: "min-width: 1150px"; // large tablets and desktops
+$breakpointLargest: "min-width: 1439px"; // large desktops
 
 // colors
-$orangeHighlight: #FB6D3A;
-$greyColor: #A8A8A8;
-$sidebarBgColor: #1E2939;
+$orangeHighlight: #fb6d3a;
+$greyColor: #a8a8a8;
+$sidebarBgColor: #1e2939;
 $defaultWhiteColor: #ccc;
 $defaultBlackColor: black;
 
