--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -6,13 +6,15 @@ html(lang="en")
     title Viktor Popov CV
     link(rel="icon", href="./favicon.ico")
     link(rel="preconnect", href="https://fonts.gstatic.com")
-    link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap")
+    link(
+      rel="stylesheet",
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap"
+    )
     link(rel="stylesheet", href="./css/main.min.css")
 
-  body 
+  body
     .main-container
       .cv-container
         include ./variables
         include ./sections/sideContainer
         include ./sections/mainContentContainer
-        
