--- a/source/template/sections/mainContentContainer.pug
+++ b/source/template/sections/mainContentContainer.pug
@@ -1,12 +1,13 @@
 .cv-content-container
   .about-me-section
-    button#print-btn(onClick='window.print()') Convert to PDF
+    button#print-btn(onClick="window.print()") Convert to PDF
     h1.about-me-name= name
     h2.about-me-profession= job
-    .about-me-description 
-      | Hello. I'm a Front-End developer with 
-      span= expYears 
-      |  years of experience in building and maintaining of responsive web applications. Have a strong knowledge of React, Redux, ES5, ES6, HTML5, CSS3 and basic knowledge of a backend part of the MERN stack: Node.js, Express.js, and MongoDB.
+    .about-me-description
+      | Hello. I'm a Front-End developer with
+      span= expYears
+      |
+      | years of experience in building and maintaining of responsive web applications. Have a strong knowledge of React, Redux, ES5, ES6, HTML5, CSS3 and basic knowledge of a backend part of the MERN stack: Node.js, Express.js, and MongoDB.
       br
       | Looking for the new opportunities to use and improve my skills in web development.
 
@@ -16,35 +17,35 @@
       h4 Front-End developer
         span.separator |
         | Intetics
-      p.date 
-        | November 2021 - up to now 
+      p.date
+        | November 2021 - up to now
         span.separator |
         | Kharkiv, Ukraine
       .project-description
-        h4 Project description 
-        p Platform for DevOps that is created for leveraging and maintaining of the CI/CD process: integration with GitHub, keeping track of workflows, runs, displaying appropriate logs, gathering, sorting and updating data about users, teams, organizaitons. Project allows its users to get all the data relevant to their permissions. 
+        h4 Project description
+        p Platform for DevOps that is created for leveraging and maintaining of the CI/CD process: integration with GitHub, keeping track of workflows, runs, displaying appropriate logs, gathering, sorting and updating data about users, teams, organizaitons. Project allows its users to get all the data relevant to their permissions.
       .resps
-        h4 Responsibilities: 
+        h4 Responsibilities:
         ul.resps-list
           li creating of new pages using React library;
           li maintaining and updating of existing code using best practices principles;
           li coverage of the code by unit and E2E tests;
           li code review;
           li discussing and providing ideas for implementation of new pages and updating of existing code and UI;
-          
+
     .workplace
       h4 Front-End developer
         span.separator |
         | DataArt
-      p.date 
+      p.date
         | March 2017 - November 2021
         span.separator |
         | Kharkiv, Ukraine
       .project-description
-        h4 Project description 
+        h4 Project description
         p Platform for users that are interested in their's credit rate provided by all global organizations that are responsible for this information. Being an authorized user of this platform persons are regularly provided with a credit rate data. Project is built in understandable visual manner using best UX and UI practices.
       .resps
-        h4 Responsibilities: 
+        h4 Responsibilities:
         ul.resps-list
           li developing of new features on client side of the site using design projects;
           li creating pixel-perfect markup using HTML5, CSS3, preprocessors LESS/SASS;
@@ -59,7 +60,7 @@
     div
       h4 Kharkiv National Technical University of Civil Engineering and Architecture
       h5 Industrial and civil engineering. Specialist (honors degree)
-      p.date 
+      p.date
         | September 2005 - June 2010
         span.separator |
         | Kharkiv, Ukraine
@@ -67,11 +68,12 @@
   .additional-info-section
     .additional-info-header Additional Information
     h4 Projects:
-    ul 
-      li 
-        | Link to this 
-        a(href="https://github.com/ViktorRV/CV" target="blank") resume
-        |  on Github
+    ul
+      li
+        | Link to this
+        a(href="https://github.com/ViktorRV/CV", target="blank") resume
+        |
+        | on Github
     h4 Hobbies:
     ul
       li football
