--- a/source/template/sections/sideContainer.pug
+++ b/source/template/sections/sideContainer.pug
@@ -11,7 +11,7 @@
           .sidebar-contacts-elem
             div Telegram:
             div
-              a(href="https://t.me/viktor_popov_080" target="_blank") @viktor_popov_080
+              a(href="https://t.me/viktor_popov_080", target="_blank") @viktor_popov_080
           .sidebar-contacts-elem
             div Skype:
             div
@@ -19,15 +19,18 @@
           .sidebar-contacts-elem
             div LinkedIn:
             div
-              a(href="https://www.linkedin.com/in/viktor-popov-b28242a2/" target="_blank") viktor-popov-b28242a2
+              a(
+                href="https://www.linkedin.com/in/viktor-popov-b28242a2/",
+                target="_blank"
+              ) viktor-popov-b28242a2
           .sidebar-contacts-elem
             div E-mail:
             div
               a(href="mailto:viktorpopov080@gmail.com") viktorpopov080@gmail.com
 
       .sidebar-content-section.skills
-        h3 Languages: 
-        ul 
+        h3 Languages:
+        ul
           li English: Upper-intermediate
         h3 Tech skills:
         h4 Primary:
@@ -39,8 +42,8 @@
           li HTML5, CSS3, LESS, SASS, SCSS
           li GIT
           li Webpack
-        h4 Basic knowledge: 
-        ul 
-          li Node.js 
+        h4 Basic knowledge:
+        ul
+          li Node.js
           li Express.js
           li MongoDB
