--- a/source/template/variables.pug
+++ b/source/template/variables.pug
@@ -1,3 +1,3 @@
-- var name = 'Viktor Popov'
-- var job = 'senior front-end developer'
-- var expYears = '7'
+- var name = "Viktor Popov";
+- var job = "senior front-end developer";
+- var expYears = "7";
