--- a/source/styles/variables.scss
+++ b/source/styles/variables.scss
@@ -15,3 +15,6 @@ $defaultBlackColor: black;
 // font sizes:
 $defaultFontSize: 16px;
 $printFontSize: 14px;
+
+// animations:
+$defaultAnimation: all 0.2s ease;
