--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -22,7 +22,7 @@ h5 {
   padding: 0;
 
   @media print {
-    margin: 5px 0;
+    margin: 10px 0;
   }
 }
 
@@ -46,7 +46,7 @@ li {
 }
 
 a {
-  transition: color 0.2s ease;
+  transition: $defaultAnimation;
   text-decoration: none;
 }
 
