--- a/source/template/sections/mainContentContainer.pug
+++ b/source/template/sections/mainContentContainer.pug
@@ -4,7 +4,7 @@
     h1.about-me-name= name
     h2.about-me-profession= job
     .about-me-description
-      | Hello. I'm a Front-End developer with
+      | Hello. I'm a Front-End developer with&nbsp;
       span= expYears
       |
       | years of experience in building and maintaining of responsive web applications. Have a strong knowledge of React, Redux, ES5, ES6, HTML5, CSS3 and basic knowledge of a backend part of the MERN stack: Node.js, Express.js, and MongoDB.
@@ -70,7 +70,7 @@
     h4 Projects:
     ul
       li
-        | Link to this
+        | Link to this&nbsp;
         a(href="https://github.com/ViktorRV/CV", target="blank") resume
         |
         | on Github
